fixed form and button on mobile

--- a/styles/background.css
+++ b/styles/background.css
@@ -114,10 +114,6 @@ select {
     width: 90%;
   }
 
-  #button {
-    display: none;
-  }
-
   .mobile-form {
     margin-top: 1em;
   }
